@@ -1,3 +1,9 @@
+2014-01-21  Mark Wielaard  <mjw@redhat.com>
+
+	* Makefile.am (TESTS): Add run-stack-i-test.sh.
+	(EXTRA_DIST): Likewise.
+	* run-stack-i-test.sh: New test.
+
 2014-01-20  Mark Wielaard  <mjw@redhat.com>
 
 	* Makefile.am (TESTS): Add run-stack-d-test.sh.
